Created Profile models and view/url changes

--- a/user/templates/profile.html
+++ b/user/templates/profile.html
@@ -13,21 +13,21 @@
                     <thead>
                     <tr>
                         <th scope="col">Пользователь</th>
-                        <td>{{user.phone}}</td>
+                        <td>{{profile}}</td>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
                         <th scope="col">Пользователь</th>
-                        <td>{{user.is_staff}}</td>
+                        <td>{{profile.user.is_staff}}</td>
                     </tr>
                     <tr>
                         <th scope="col">Пользователь</th>
-                        <td>{{user.phone}}</td>
+                        <td>{{profile.user.phone}}</td>
                     </tr>
                     <tr>
                         <th scope="col">Пользователь</th>
-                        <td>{{user.phone}}</td>
+                        <td>{{profile.user.invite_code}}</td>
                     </tr>
                     </tbody>
                 </table>
