--- a/user/templates/base.html
+++ b/user/templates/base.html
@@ -8,6 +8,17 @@
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 </head>
 <body>
+<div class="d-flex flex-column flex-md-row align-items-center">
+    <nav class="p-1 ms-5">
+        {% if user.is_authenticated %}
+        <a class="p-2 btn btn-secondary" href="{% url 'profile' user.profile.invite_code %}">Пользователь: {{ user.phone }}</a>
+        <a class="p-2 btn btn-secondary" href="{% url 'logout' %}">Выход</a>
+        {% else %}
+        <a class="p-2 btn btn-secondary" href="{% url 'login' %}">Вход</a>
+        <a class="p-2 btn btn-secondary" href="{% url 'register' %}">Регистрация</a>
+        {% endif %}
+    </nav>
+</div>
 
 {% if messages %}
 {% for message in messages %}
@@ -24,6 +35,7 @@
 {% endif %}
 {% block content %}
 {% endblock %}
+
 
 <div class="container">
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
